--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -5,65 +5,84 @@
     padding: 0;
     list-style: none;
 }
+li:hover{
+    cursor: pointer;
+    box-shadow: 4px 6px 5px 6px rgb(80, 80, 121);
+}
 
 .normal {
     background-color: #a6a877;
+    box-shadow: 4px 6px 5px black;
 }
 
 .grass {
     background-color: #77c850;
+    box-shadow: 4px 6px 5px black;
 }
 
 .fire {
     background-color: #ee7f30;
+    box-shadow: 4px 6px 5px black;
 }
 
 .water {
     background-color: #678fee;
+    box-shadow: 4px 6px 5px black;
 }
 
 .electric {
     background-color: #f7cf2e;
+    box-shadow: 4px 6px 5px black;
 }
 
 .ice {
     background-color: #98d5d7;
+    box-shadow: 4px 6px 5px black;
 }
 
 .ground {
     background-color: #dfbf69;
+    box-shadow: 4px 6px 5px black;
 }
 
 .flying {
     background-color: #a98ff0;
+    box-shadow: 4px 6px 5px black;
 }
 
 .poison {
     background-color: #a040a0;
+    box-shadow: 4px 6px 5px black;
 }
 
 .fighting {
     background-color: #bf3029;
+    box-shadow: 4px 6px 5px black;
 }
 
 .psychic {
     background-color: #f65687;
+    box-shadow: 4px 6px 5px black;
 }
 
 .dark {
     background-color: #725847;
+    box-shadow: 4px 6px 5px black;
 }
 
 .rock {
     background-color: #b8a137;
+    box-shadow: 4px 6px 5px black;
 }
 
 .bug {
     background-color: #a8b720;
+    box-shadow: 4px 6px 5px black;
 }
 
 .ghost {
     background-color: #6e5896;
+    box-shadow: 4px 6px 5px black;
 }
 
 .steel {
